--- a/light/index.html
+++ b/light/index.html
@@ -102,7 +102,7 @@
       </nav>
       <!-- END nav -->
 
-      <div class="cover-v1 jarallax overlay" style="background-image: url('images/cover_bg_1.jpg');" id="home-section">
+      <div class="cover-v1 jarallax overlay" style="background-image: url('images/cover_bg_1.png');" id="home-section">
         <div class="container">
           <div class="row align-items-center">
               
