Replace SVG icons with updated designs for improved aesthetics

--- a/index.html
+++ b/index.html
@@ -303,9 +303,9 @@
               </figure>
             </div>
             <div class="col-lg-4 pr-lg-5">
-              <h3 class="mb-4 heading-h3"><span class="gsap-reveal">We can make it together</span></h3>
-              <p class="lead gsap-reveal">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there <a href="#">live the blind</a> texts. </p>
-              <p class="mb-4 gsap-reveal">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+              <h3 class="mb-4 heading-h3"><span class="gsap-reveal">Hey There,</span></h3>
+              <p class="lead gsap-reveal">Crafting immersive digital landscapes at <a href="#">Zenthos Productions</a> where every pixel tells a story, and every environment breathes life into the world of gaming.</p>
+              <p class="mb-4 gsap-reveal">As a Senior Environment Developer at <a href="#">Zenthos Productions</a>, I shape dynamic, high-fidelity worlds that push the boundaries of visual storytelling and interactive experiences.</p>
             </div>
           </div>
         </div>
@@ -325,8 +325,8 @@
                 <div class="wrap-icon mb-3">
                   <img src="images/svg/001-options.svg" alt="Image" width="45">
                 </div>
-                <h3>Digital <br> Strategy</h3>
-                <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. </p>
+                <h3>Unity <br> 3D</h3>
+                <p>I am very interested in making games through Unity </p>
               </div> 
             </div>
             <div class="col-md-6 col-lg-4 mb-4">
@@ -334,8 +334,8 @@
                 <div class="wrap-icon mb-3">
                   <img src="images/svg/002-chat.svg" alt="Icon" width="45">
                 </div>
-                <h3>Web <br> Design</h3>
-                <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. </p>
+                <h3>Environment <br> Development</h3>
+                <p>Since i work with Unity 3D, I'm giving life most of my imaginations by bringing them through creating 3D Environmens </p>
               </div> 
             </div>
             <div class="col-md-6 col-lg-4 mb-4">
@@ -343,7 +343,7 @@
                 <div class="wrap-icon mb-3">
                   <img src="images/svg/003-contact-book.svg" alt="Image" class="img-fluid" width="45">
                 </div>
-                <h3>User <br> Experience</h3>
+                <h3>Adobe <br> Illustrator</h3>
                 <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. </p>
               </div> 
             </div>
@@ -353,8 +353,8 @@
                 <div class="wrap-icon mb-3">
                   <img src="images/svg/004-percentage.svg" alt="Image" width="45">
                 </div>
-                <h3>Web <br> Development</h3>
-                <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. </p>
+                <h3>Blender</h3>
+                <p>I Work with 3D modeling using blender, I don't use it to recreate worlds but 3D objects.</p>
               </div> 
             </div>
             <div class="col-md-6 col-lg-4 mb-4">
@@ -362,20 +362,10 @@
                 <div class="wrap-icon mb-3">
                   <img src="images/svg/006-goal.svg" alt="Image" width="45">
                 </div>
-                <h3>WordPress <br> Solutions</h3>
-                <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. </p>
+                <h3>Discord</h3>
+                <p>Wanna Hangout ? Greate let's talk with eachother in our Zenthos Officila Discord, Link is Below </p>
               </div> 
             </div>
-            <div class="col-md-6 col-lg-4 mb-4">
-              <div class="feature-v1" data-aos="fade-up" data-aos-delay="200">
-                <div class="wrap-icon mb-3">
-                  <img src="images/svg/005-line-chart.svg" alt="Image" width="45">
-                </div>
-                <h3>Mobile <br> Applications</h3>
-                <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. </p>
-              </div> 
-            </div>
-
           </div>
         </div>
       </div>
@@ -443,8 +433,8 @@
             <div class="col-md-4">
               <div class="contact-info-v1">
                 <div class="gsap-reveal d-block">
-                  <span class="d-block contact-info-label">Email</span>
-                  <a href="#" class="contact-info-val">semira@zenthos.dev</a>
+                  <span class="d-block contact-info-label">Discord</span>
+                  <a href="https://discord.gg/KhN8BBtGYD" class="contact-info-val">Click to Join Zenthos Official Discord</a>
                 </div>
               </div>
             </div>
