--- a/index.html
+++ b/index.html
@@ -136,54 +136,54 @@
             
             <div id="posts" class="row gutter-isotope-item">
               <div class="item web branding col-sm-6 col-md-6 col-lg-4 isotope-mb-2">
-                <a href="portfolio-single-1.html" class="portfolio-item ajax-load-page isotope-item gsap-reveal-img" data-id="1">
+                <a href="#" class="portfolio-item ajax-load-page isotope-item gsap-reveal-img" data-id="1">
                     <div class="overlay">
                       <span class="wrap-icon icon-link2"></span>
                       <div class="portfolio-item-content">
-                        <h3>Shoe Rebranding</h3>
-                        <p>web, branding</p>
+                        <h3>Darkvale</h3>
+                        <p>Zenthos</p>
                       </div>
                     </div>
-                    <img src="images/work_1_md.jpg" class="lazyload  img-fluid" alt="Images" />
+                    <img src="images/showcase/1-min.jpg" class="lazyload  img-fluid" alt="Images" />
                   </a>
               </div>
               <div class="item branding packaging illustration col-sm-6 col-md-6 col-lg-4 isotope-mb-2 ">
-                <a href="portfolio-single-3.html" class="portfolio-item ajax-load-page item-portrait isotope-item gsap-reveal-img" data-id="3">
+                <a href="#" class="portfolio-item ajax-load-page item-portrait isotope-item gsap-reveal-img" data-id="3">
                     <div class="overlay">
                       <span class="wrap-icon icon-link2"></span>
                       <div class="portfolio-item-content">
-                        <h3>Reworking</h3>
-                        <p>branding, packaging, illustration</p>
+                        <h3>Cabin in the Wood</h3>
+                        <p>3D Environment</p>
                       </div>
                     </div>
-                    <img src="images/work_2_md.jpg" class="lazyload  img-fluid" alt="Images" />
+                    <img src="images/showcase/2-min.jpg" class="lazyload  img-fluid" alt="Images" />
                   </a>
               </div>
 
               <div class="item branding packaging col-sm-6 col-md-6 col-lg-4 isotope-mb-2">
-                <a href="portfolio-single-4.html" class="portfolio-item isotope-item gsap-reveal-img ajax-load-page" data-id="4">
+                <a href="#" class="portfolio-item isotope-item gsap-reveal-img ajax-load-page" data-id="4">
                     <div class="overlay">
                       <span class="wrap-icon icon-link2"></span>
                       <div class="portfolio-item-content">
-                        <h3>Modern Building</h3>
-                        <p>branding, packaging</p>
+                        <h3>Cabin in the Wood</h3>
+                        <p>3D Environment</p>
                       </div>
                     </div>
-                    <img src="images/work_3_md.jpg" class="lazyload  img-fluid" alt="Images" />
+                    <img src="images/showcase/3-min.jpg" class="lazyload  img-fluid" alt="Images" />
                   </a>
               </div>
 
               <div class="item web packaging col-sm-6 col-md-6 col-lg-4 isotope-mb-2">
 
-                <a href="images/work_4_full.jpg" class="portfolio-item isotope-item gsap-reveal-img" data-fancybox="gallery" data-caption="Watch">
+                <a href="#" class="portfolio-item isotope-item gsap-reveal-img" data-fancybox="gallery" data-caption="Watch">
                     <div class="overlay">
                       <span class="wrap-icon icon-photo2"></span>
                       <div class="portfolio-item-content">
-                        <h3>Watch</h3>
-                        <p>web, packaging</p>
+                        <h3>Cabin in the Wood</h3>
+                        <p>3D Environment</p>
                       </div>
                     </div>
-                    <img src="images/work_4_full.jpg" class="lazyload  img-fluid" alt="Images" />
+                    <img src="images/showcase/4-min.jpg" class="lazyload  img-fluid" alt="Images" />
                   </a>
 
               </div>
@@ -193,24 +193,24 @@
                     <div class="overlay">
                       <span class="wrap-icon icon-photo2"></span>
                       <div class="portfolio-item-content">
-                        <h3>Shoe Rebranding</h3>
-                        <p>illustration, packaging</p>
+                        <h3>Cabin in the Wood</h3>
+                        <p>3D Environment</p>
                       </div>
                     </div>
-                    <img src="images/work_5_md.jpg" class="lazyload  img-fluid" alt="Images" />
+                    <img src="images/showcase/5-min.jpg" class="lazyload  img-fluid" alt="Images" />
                   </a>
               </div>
 
               <div class="item web branding col-sm-6 col-md-6 col-lg-4 isotope-mb-2">
-                <a href="portfolio-single-2.html" class="portfolio-item ajax-load-page item-portrait isotope-item gsap-reveal-img" data-id="2">
+                <a href="#" class="portfolio-item ajax-load-page item-portrait isotope-item gsap-reveal-img" data-id="2">
                     <div class="overlay">
                       <span class="wrap-icon icon-link2"></span>
                       <div class="portfolio-item-content">
-                        <h3>Reshape</h3>
-                        <p>web, branding</p>
+                        <h3>Cabin in the Wood</h3>
+                        <p>3D Environment</p>
                       </div>
                     </div>
-                    <img src="images/work_6_md.jpg" class="lazyload  img-fluid" alt="Images" />
+                    <img src="images/showcase/6-min.png" class="lazyload  img-fluid" alt="Images" />
                   </a>
               </div>
 
@@ -219,37 +219,37 @@
                     <div class="overlay">
                       <span class="wrap-icon icon-photo2"></span>
                       <div class="portfolio-item-content">
-                        <h3>Modern Building</h3>
-                        <p>branding, packaging</p>
+                        <h3>Cabin in the Wood</h3>
+                        <p>3D Environment</p>
                       </div>
                     </div>
-                    <img src="images/work_7_a_md.jpg" class="lazyload  img-fluid" alt="Images" />
+                    <img src="images/showcase/7-min.jpg" class="lazyload  img-fluid" alt="Images" />
                   </a>
               </div>
 
               <div class="item web branding col-sm-6 col-md-6 col-lg-4 isotope-mb-2">
-                <a href="https://www.youtube.com/watch?v=mwtbEGNABWU" class="portfolio-item isotope-item gsap-reveal-img" data-fancybox="gallery" data-caption="Showreel 2019">
+                <a href="#" class="portfolio-item isotope-item gsap-reveal-img" data-fancybox="gallery" data-caption="Showreel 2019">
                     <div class="overlay">
                       <span class="wrap-icon icon-play_circle_filled"></span>
                       <div class="portfolio-item-content">
-                        <h3>Showreel 2019</h3>
-                        <p>web, branding</p>
+                        <h3>Cabin in the Wood</h3>
+                        <p>3D Environment</p>
                       </div>
                     </div>
-                    <img src="images/work_8_md.jpg" class="lazyload  img-fluid" alt="Images" />
+                    <img src="images/showcase/8-min.jpg" class="lazyload  img-fluid" alt="Images" />
                   </a>
               </div>
 
               <div class="item web illustration col-sm-6 col-md-6 col-lg-4 isotope-mb-2">
-                <a href="images/work_9_a_md.jpg" class="portfolio-item isotope-item gsap-reveal-img" data-fancybox="gallery" data-caption="Render Packaging">
+                <a href="#" class="portfolio-item isotope-item gsap-reveal-img" data-fancybox="gallery" data-caption="Render Packaging">
                     <div class="overlay">
                       <span class="wrap-icon icon-photo2"></span>
                       <div class="portfolio-item-content">
-                        <h3>Render Packaging</h3>
-                        <p>web, illustration</p>
+                        <h3>Cabin in the Wood</h3>
+                        <p>3D Environment</p>
                       </div>
                     </div>
-                    <img src="images/work_9_a_md.jpg" class="lazyload  img-fluid" alt="Images" />
+                    <img src="images/showcase/9-min.jpg" class="lazyload  img-fluid" alt="Images" />
                   </a>
               </div>
 
